# ExpertRuleFit

./: .gitignore  CODE_REVIEW.md  LICENSE  README.md  expertrulefit_validation.py  pyproject.toml
.github/workflows/: ci.yml
docs/: REPRODUCIBILITY_CONTAINERS.md  SOTA.md
examples/: classification_with_rules.py  dual_model_demo.py  ebm_pipeline.py  prediction_basics.py  prediction_inspection.py  quick_demo.py  validate_100_seeds.py
expertrulefit/: __init__.py  dual_glass_box.py  dual_model.py  ebm_bridge.py  expert_rulefit.py  rule_spec.py
tests/: test_dual_model.py  test_ebm_bridge.py  test_expert_rulefit.py  test_validation.py
