[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "expertrulefit"
version = "0.1.0"
description = "Reproducible interpretable ML for regulated banking — EBM-grounded rules that survive any regularization"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Djebar Hammouche" },
]
keywords = [
    "ebm-rules-grounded",
    "explainable-boosting-machine",
    "rulefit",
    "interpretable-ml",
    "credit-scoring",
    "regulatory-compliance",
    "reproducible-ml",
    "confirmatory-rules",
    "elastic-net",
    "bootstrap-stabilization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy",
    "scikit-learn",
    "imodels",
]

[project.optional-dependencies]
ebm = ["interpret", "pandas"]
dev = ["pytest"]

[project.urls]
Repository = "https://github.com/hdjebar/ExpertRuleFit"

[tool.setuptools.packages.find]
include = ["expertrulefit*"]
