[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "expertrulefit"
dynamic = ["version"]
description = "Reproducible interpretable ML for regulated banking — EBM-grounded rules that survive any regularization"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Djebar Hammouche" },
]
keywords = [
    "ebm-rules-grounded",
    "explainable-boosting-machine",
    "rulefit",
    "interpretable-ml",
    "credit-scoring",
    "regulatory-compliance",
    "reproducible-ml",
    "confirmatory-rules",
    "elastic-net",
    "bootstrap-stabilization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "joblib>=1.0",
    "imodels>=1.3",
    "packaging>=20.0",
]

[project.optional-dependencies]
ebm = [
    "interpret>=0.4",
    "pandas>=1.3",
]
dev = [
    "pytest>=7.0",
    "interpret>=0.4",
    "pandas>=1.3",
]

[project.urls]
Repository = "https://github.com/hdjebar/ExpertRuleFit"

[tool.setuptools.dynamic]
version = {attr = "expertrulefit._version.__version__"}

[tool.setuptools.packages.find]
include = ["expertrulefit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # Surface convergence and numerical warnings (important for regulated models)
    "default::sklearn.exceptions.ConvergenceWarning",
    "default::RuntimeWarning",
    # Suppress noisy but harmless deprecation warnings from dependencies
    "ignore::DeprecationWarning:imodels",
    "ignore::FutureWarning:sklearn",
    "ignore::UserWarning:sklearn",
    # Suppress ExpertRuleFit's own expected warnings during tests
    "ignore:random_state=:UserWarning:expertrulefit",
]
